--- a/content/20170222.md
+++ b/content/20170222.md
@@ -5,4 +5,9 @@ Tags: Stunnel
 Slug: Week 1
 Author: 40423205
 
+##修改 stunnel.conf 的 IP 設定
+<iframe src="https://player.vimeo.com/video/207477931" width="640" height="336" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/207477931">設定stunnel.conf</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
+<p>心得: 忘了差不多了，去問別人才又想起來怎麼做。
+ipconfig /all指令</p>
