--- a/content/20170322.md
+++ b/content/20170322.md
@@ -69,5 +69,5 @@ Exit
 <h3>建立與 project name 同名的首頁 wiki</h3>
 
 <h3>從 Onshape 匯出 onebar 並在 V-rep 加入馬達</h3>
-<p>SolveSpacec 匯出: <button onClick="lity('https://vimeo.com/211506262')"><span class="glyphicon glyphicon-facetime-video"></span> 影片</button><p>
+<p>Onshape 匯出: <button onClick="lity('https://vimeo.com/211506262')"><span class="glyphicon glyphicon-facetime-video"></span> 影片</button><p>
 <p>V-rep 加入馬達: <button onClick="lity('https://vimeo.com/211506622')"><span class="glyphicon glyphicon-facetime-video"></span> 影片</button><p>
