update blog Week 6

--- a/content/20170308.md
+++ b/content/20170308.md
@@ -74,14 +74,18 @@ Exit
 
 <h3>Fourbar</h3>
 <p>零件繪製<p>
-<p>Link_30: <button onClick="lity('https://vimeo.com/209081300')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
+<p>Link_30: 
+<button onClick="lity('https://vimeo.com/209081300')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
 <button onClick="lity('https://vimeo.com/211160048')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape</button> 
 
-<p>Link_50: <button onClick="lity('https://vimeo.com/208011527')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
+<p>Link_50: 
+<button onClick="lity('https://vimeo.com/208011527')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
 <button onClick="lity('https://vimeo.com/211160246')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape</button> 
 
-<p>Link_60: <button onClick="lity('https://vimeo.com/209222003')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
+<p>Link_60: 
+<button onClick="lity('https://vimeo.com/209222003')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
 <button onClick="lity('https://vimeo.com/211160296')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape</button> 
 
-<p>Fourbar組裝: <button onClick="lity('https://vimeo.com/210118780')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
+<p>Fourbar組裝: 
+<button onClick="lity('https://vimeo.com/210118780')"><span class="glyphicon glyphicon-facetime-video"></span> SolveSpace</button> 
 <button onClick="lity('https://vimeo.com/211318807')"><span class="glyphicon glyphicon-facetime-video"></span> Onshape</button></p>
