--- a/content/20170315.md
+++ b/content/20170315.md
@@ -6,4 +6,10 @@ Slug: Week 4
 Author: 40423205
 
 
-##單桿機構
+##Onebar
+<p>零件繪製<p>
+<p>onshape繪製: <button onClick="lity('https://vimeo.com/211343657')"><span class="glyphicon glyphicon-facetime-video"></span> Onebar</button> 
+<p>onshape匯入v-rep: <button onClick="lity('https://vimeo.com/211343657')"><span class="glyphicon glyphicon-facetime-video"></span> Onebar匯入v-rep</button> 
+##Fourbar
+<p>onshape繪製: <button onClick="lity('https://vimeo.com/211318807')"><span class="glyphicon glyphicon-facetime-video"></span> fourbar</button> 
+
