--- a/content/20170322.md
+++ b/content/20170322.md
@@ -69,5 +69,7 @@ Exit
 <h3>建立與 project name 同名的首頁 wiki</h3>
 
 <h3>從 Onshape 匯出 onebar 並在 V-rep 加入馬達</h3>
-<p>Onshape 匯出: <button onClick="lity('https://vimeo.com/211506262')"><span class="glyphicon glyphicon-facetime-video"></span> 影片</button><p>
-<p>V-rep 加入馬達: <button onClick="lity('https://vimeo.com/211506622')"><span class="glyphicon glyphicon-facetime-video"></span> 影片</button><p>
+<p>Onshape 匯出: <iframe src="https://player.vimeo.com/video/211506262" width="640" height="308" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211506262">2017-04-04_ Onshape (Onebar) 匯入 V-rep</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p>V-rep 加入馬達: <iframe src="https://player.vimeo.com/video/211506622" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211506622">2017-04-04_V-rep(Onebar) 加入馬達</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
