--- a/content/20170308.md
+++ b/content/20170308.md
@@ -1,7 +1,7 @@
-Title: 20170308 Week 3
+Title: 20170308_W3
 Date: 2017-03-08 11:00
 Category: Course
-Tags: HyperWorks, SolveSpace, Onshape, Fossil
+Tags:W3
 Slug: Week 3
 Author: 40423205
 
