--- a/content/20170322.md
+++ b/content/20170322.md
@@ -1,7 +1,7 @@
-Title: 20170322 Week 5
+Title: 20170322_W 5
 Date: 2017-03-22 11:00
 Category: Course
-Tags: Fossil, SolveSpace, V-rep
+Tags:W5
 Slug: Week 5
 Author: 40423205
 
