--- a/content/20170329.md
+++ b/content/20170329.md
@@ -1,7 +1,7 @@
-Title: 20170329 Week 6
+Title: 20170329_W6
 Date: 2017-03-29 11:00
 Category: Course
-Tags: SolveSpace, V-rep
+Tags:W6
 Slug: Week 6
 Author: 40423205
 
