--- a/content/20170222.md
+++ b/content/20170222.md
@@ -1,7 +1,7 @@
-Title: 20170222 Week 1
+Title: 20170222_W1
 Date: 2017-02-22 11:00
 Category: Course
-Tags: Stunnel
+Tags:W1
 Slug: Week 1
 Author: 40423205
 
