--- a/content/20170301.md
+++ b/content/20170301.md
@@ -1,7 +1,7 @@
-Title: 20170301 Week 2
+Title: 20170301_W2
 Date: 2017-03-01 11:00
 Category: Course
-Tags: SolveSpace
+Tags:W2
 Slug: Week 2
 Author: 40423205
 
