--- a/content/20170315.md
+++ b/content/20170315.md
@@ -1,7 +1,7 @@
-Title: 20170315 Week 4
+Title: 20170315_W4
 Date: 2017-03-15 11:00
 Category: Course
-Tags: Fossil
+Tags:W4
 Slug: Week 4
 Author: 40423205
 
