--- a/content/20170315.md
+++ b/content/20170315.md
@@ -4,12 +4,17 @@ Category: Course
 Tags:W4
 Slug: Week 4
 Author: 40423205
-
+##Fossil SCM倉儲
+<p>每組要在https://mde2a2.kmol.info 主機上建倉儲:https://mde2a2.kmol.info/cdbg5
 
 ##Onebar
 <p>零件繪製<p>
-<p>onshape繪製: <button onClick="lity('https://vimeo.com/211343657')"><span class="glyphicon glyphicon-facetime-video"></span> Onebar</button> 
-<p>onshape匯入v-rep: <button onClick="lity('https://vimeo.com/211343657')"><span class="glyphicon glyphicon-facetime-video"></span> Onebar匯入v-rep</button> 
+<p>onshape繪製: <iframe src="https://player.vimeo.com/video/211343657" width="640" height="306" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211343657">2017-04-03_Onebar (Onshape)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p>onshape匯入v-rep: <iframe src="https://player.vimeo.com/video/211506262" width="640" height="308" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211506262">2017-04-04_ Onshape (Onebar) 匯入 V-rep</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 ##Fourbar
-<p>onshape繪製: <button onClick="lity('https://vimeo.com/211318807')"><span class="glyphicon glyphicon-facetime-video"></span> fourbar</button> 
+<p>onshape繪製: <iframe src="https://player.vimeo.com/video/211318807" width="640" height="306" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/211318807">2017-04-03_Fourbar (Onshape)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
+<p>心得:這禮拜要建立好各組的倉儲，每位組員要分工合作。畫了單連桿與四連桿並且匯入。
