--- a/content/20170315.md
+++ b/content/20170315.md
@@ -5,7 +5,7 @@ Tags:W4
 Slug: Week 4
 Author: 40423205
 ##Fossil SCM倉儲
-<p>每組要在https://mde2a2.kmol.info 主機上建倉儲:https://mde2a2.kmol.info/cdbg5
+<p>每組要在https://mde2a2.kmol.info 主機上建倉儲:https://mde2a2.kmol.info/cdbg5 </p>
 
 ##Onebar
 <p>零件繪製<p>
