--- a/content/20170419.md
+++ b/content/20170419.md
@@ -10,3 +10,6 @@ Author: 40423205
 <p>Length=50 的 T 點軌跡圖
 <iframe src="https://player.vimeo.com/video/213777378" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213777378">2017-04-19_軌跡圖(midterm1)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+
+<P>心得:這周是期中協同查驗與自評，軌跡圖畫得還算順，但四連桿四足行走機構有點問題。
+
