update blog Week

--- a/content/20170315.md
+++ b/content/20170315.md
@@ -5,6 +5,8 @@ Tags:W4
 Slug: Week 4
 Author: 40423205
 ##Fossil SCM倉儲
+<!-- PELICAN_END_SUMMARY -->
+
 <p>每組要在https://mde2a2.kmol.info 主機上建倉儲:https://mde2a2.kmol.info/cdbg5 </p>
 
 <h3>Onebar</h3>
