--- a/content/20170405.md
+++ b/content/20170405.md
@@ -6,6 +6,8 @@ Slug: Week 7
 Author: 40423205
 
 ##8link組裝
+<!-- PELICAN_END_SUMMARY -->
+
 <iframe src="https://player.vimeo.com/video/213701995" width="640" height="359" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/213701995">2017-04-18_8link (SolveSpace)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 <p>心得:八連桿用超久的，不會很難但很麻煩。
