--- a/content/20170419.md
+++ b/content/20170419.md
@@ -6,6 +6,7 @@ Slug: Week 9
 Author: 40423205
 
 ##四連桿機構協同 Trace Point 查驗
+<!-- PELICAN_END_SUMMARY -->
 
 <p>Length=50 的 T 點軌跡圖
 <iframe src="https://player.vimeo.com/video/213777378" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
