--- a/content/20170426.md
+++ b/content/20170426.md
@@ -6,6 +6,7 @@ Slug: Week 10
 Author: 40423205
 
 ##Fourbar Walker OnShape 零件協同繪圖與組立查驗
+<!-- PELICAN_END_SUMMARY -->
 
 <p>四連桿四足行走機構
 <iframe src="https://player.vimeo.com/video/214869893" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
