--- a/content/20170329.md
+++ b/content/20170329.md
@@ -6,6 +6,8 @@ Slug: Week 6
 Author: 40423205
 
 <h3>Fourbar 安裝 base</h3>
+<!-- PELICAN_END_SUMMARY -->
+
 <iframe src="https://player.vimeo.com/video/212778286" width="640" height="333" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/212778286">2017-04-11_Fourbar (base) (SolveSpace)</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
