--- a/content/20170412.md
+++ b/content/20170412.md
@@ -6,6 +6,7 @@ Slug: Week 8
 Author: 40423205
 
 ##期中評分
+<!-- PELICAN_END_SUMMARY -->
 
 <p>個人自評:<a href="http://mde1a2.kmol.info:8000/k96tgzh1ofbl">http://mde1a2.kmol.info:8000/k96tgzh1ofbl</a></p>
 <p>小組互評:<a href="https://pygroup-ag100.rhcloud.com">https://pygroup-ag100.rhcloud.com</a></p>
