--- a/content/20170517.md
+++ b/content/20170517.md
@@ -6,6 +6,7 @@ Slug: Week 13
 Author: 40423205
 
 ##八連桿行走機構
+<!-- PELICAN_END_SUMMARY -->
 
 <iframe src="https://player.vimeo.com/video/222323602" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/222323602">2017-06-16_模擬 Eightbar 行走機構</a> from <a href="https://vimeo.com/user63868127">40423205</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
