--- a/content/20170614.md
+++ b/content/20170614.md
@@ -5,6 +5,8 @@ Tags:W17
 Slug: Week 17
 Author: 40423205
 
-<h3>協同查驗</h3>
+##協同查驗</h3>
+<!-- PELICAN_END_SUMMARY -->
 
-##各組員倉儲中的 Github 檔案推送
+<h3>各組員倉儲中的 Github 檔案推送</h3>
+
