update blog Week 17

--- a/content/20170614.md
+++ b/content/20170614.md
@@ -8,5 +8,24 @@ Author: 40423205
 ##協同查驗</h3>
 <!-- PELICAN_END_SUMMARY -->
 
-<h3>各組員倉儲中的 Github 檔案推送</h3>
+###本周任務
+<p align="left">
+1. 在各自的倉儲中, 建立一個雙足 solvepace 機構零組件, 存入 final 子目錄中. </p>
+
+<p align="left">
+2. 在各自的網誌上的畫 2D 繪圖, 並將程式碼顯示在繪圖網誌文章中, 以 Brython 畫出行走機構的示意圖. </p>
+
+<p align="left">
+3. 在各自的倉儲中, 將 https://github.com/scrum-1/cdbw17 倉儲納入作為 w17 子目錄, 並設法導入其中的 script1.py 進行 axises() 繪圖函式的呼叫, 在任務 2 的圖中畫出座標軸. </p>
+<p align="left">
+4. 在各自的網誌中設法動態顯示出任務 1 所完成的零組件. </p>
+
+<p align="left">
+5. 將任務 1 所完成的行走機構匯入 V-rep, 並設法模擬雙足機構作動過程. </p>
+
+<p align="left">
+6. 說明在分組行走機構模擬與實作過程中所扮演的角色, 並利用影片檔說明所負責完成的任務. </p>
+
+<p align="left">
+7. 各組以協同方式整合各組組員所完成的倉儲, 網誌與操作影片後, 以學號名稱當作子目錄, 其中放入各組員上述各題所完成的操作影片後, 上傳到各組在系上的 Fossil SCM 倉儲, 並設法用各組的 Github Pages 進行分組簡報. </p>
 
